--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -321,8 +321,8 @@ jobs:
           fullCoverageDiff: true
           autorun: false
           postComment: false
-          oldCodeCoveragePath: ./dest-client-side-tests-artifacts/coverage/chrome/coverage-summary.json
-          newCodeCoveragePath: ./src-client-side-tests-artifacts/coverage/chrome/coverage-summary.json
+          oldCodeCoveragePath: ./dest-client-side-tests-artifacts/coverage/coverage-summary.json
+          newCodeCoveragePath: ./src-client-side-tests-artifacts/coverage/coverage-summary.json
           total_delta: 2
       - name: Merge coverage report for registry
         run: |
@@ -336,9 +336,9 @@ jobs:
           fullCoverageDiff: true
           autorun: false
           postComment: false
-          oldCodeCoveragePath: ./dest-merged-registry-tests-artifacts/coverage/coverage-summary.json
+          oldCodeCoveragePath: ./dest-merged-registry-tests-artifacts/coverage/chrome/coverage-summary.json # remove "chrome after merge PR fix cpu
           newCodeCoveragePath: ./src-merged-registry-tests-artifacts/coverage/coverage-summary.json
-          total_delta: 6
+          total_delta: 2
       - name: Compose comment
         if: success() || failure()
         run: |
