--- a/ilc/package.json
+++ b/ilc/package.json
@@ -60,6 +60,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.25.4",
     "@babel/register": "^7.24.6",
+    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
     "@types/chai": "^4.3.19",
     "@types/config": "^3.3.5",
     "@types/mocha": "^10.0.8",
@@ -74,7 +75,7 @@
     "karma": "^6.4.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-parallel": "^0.3.1",
